[gd_scene load_steps=5 format=3 uid="uid://diy8qh6tf7sco"]

[ext_resource type="Script" path="res://Components/hurtbox_component.gd" id="1_e4d5n"]
[ext_resource type="Script" path="res://Objects/PickUp.gd" id="1_rucxl"]
[ext_resource type="Script" path="res://Components/hitbox_component.gd" id="2_ghoej"]
[ext_resource type="Script" path="res://Components/variable_pitch_audio_stream_player.gd" id="3_nc3bl"]

[node name="PickUp" type="Node2D"]
script = ExtResource("1_rucxl")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")

[node name="HurtboxComponent" type="Area2D" parent="."]
script = ExtResource("1_e4d5n")

[node name="HitboxComponent" type="Area2D" parent="."]
script = ExtResource("2_ghoej")

[node name="VariablePitchAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
script = ExtResource("3_nc3bl")
